<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Plotador de Horas</string>
    <string name="tela_cadastro_name">Cadastro de Atividade</string>
    <string name="hello_world">Hello world!</string>
    <string name="cadastro">Cadastrar Atividade</string>
    <string name="Cadastro">Cadastro</string>
    <string name="nome_atividade">Nome da Atividade</string>
    <string name="tempo_atividade">Tempo da Atividade</string>
    <string name="data_atividade">Data da Atividade</string>
    <string name="botao_cadastrar">Cadastrar</string>
    <string name="botao_voltar_atividade">Voltar</string>

    <string-array name="sugestao_atividades">
        <item>Fumar</item>
        <item>Ler</item>
        <item>Almoçar</item>
        <item>Jantar</item>
        <item>Dormir</item>
        <item>Jogar bola</item>
        <item>Estudar LES</item>
        <item>Estudar SI 1</item>
        <item>Jogar no PC</item>
        <item>Correr</item>
        <item>Caminhar</item>
        <item>Projeto no Lab</item>
    </string-array>

    <string name="title_activity_cadastrar_min_so_pra_teste">CadastrarMinSoPraTeste</string>

</resources>
